Intermediate CPM version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,3 +76,4 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out/bin)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out/lib)
 
 add_subdirectory(source)
+add_subdirectory(test)
