--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -16,6 +16,7 @@ add_enclave(
   TARGET ConfidentialPackageManager
   UUID d3c5bbbc-adad-11eb-bd25-4362002e2749
     SOURCES
+    cpm_crypto.c
     main.c
     ${CMAKE_CURRENT_BINARY_DIR}/ConfidentialPackageSpecification_t.c)
 
