--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright (c) Open Enclave SDK contributors.
+# Copyright (c) Confidential Packaging contributors.
 # Licensed under the MIT License.
 
 cmake_minimum_required(VERSION 3.12 FATAL_ERROR)
@@ -8,55 +8,10 @@ project(
   VERSION 1.0
   LANGUAGES C CXX)
 
-set(OE_TEE
-    ""
-    CACHE STRING "Select a Trusted Execution Environment (TEE) implementation.")
-set_property(CACHE OE_TEE PROPERTY STRINGS "SGX" "OP-TEE")
+set(OE_OPTEE ON)
+set(OE_PACKAGE_OPTEE_PLATFORM trustsom)
 
-set(OE_OPTEE_PLATFORM CACHE STRING "Select the target OP-TEE platform")
-set_property(CACHE OE_OPTEE_PLATFORM PROPERTY STRINGS "Grapeboard" "QEMU-ARMv8")
-
-if ("${OE_TEE}" STREQUAL "SGX")
-  set(OE_SGX ON)
-  set(OE_OPTEE OFF)
-elseif ("${OE_TEE}" STREQUAL "OP-TEE")
-  set(OE_SGX OFF)
-  set(OE_OPTEE ON)
-else ()
-  message(FATAL_ERROR "OE_TEE must be one of 'SGX' or 'OP-TEE'.")
-endif ()
-
-if (OE_OPTEE)
-  if ("${OE_OPTEE_PLATFORM}" STREQUAL "QEMU-ARMv8")
-    set(OE_OPTEE_QEMU_ARMV8 ON)
-    set(OE_OPTEE_GRAPEBOARD OFF)
-  elseif ("${OE_OPTEE_PLATFORM}" STREQUAL "Grapeboard")
-    set(OE_OPTEE_QEMU_ARMV8 OFF)
-    set(OE_OPTEE_GRAPEBOARD ON)
-  elseif(DEFINED OE_PACKAGE_OPTEE_PLATFORM)
-    set(OE_OPTEE_QEMU_ARMV8 OFF)
-    set(OE_OPTEE_GRAPEBOARD OFF)
-  else()
-    message(
-      FATAL_ERROR
-        "OE_OPTEE_PLATFORM must be one of 'QEMU-ARMv8' or 'Grapeboard'.")
-  endif ()
-endif ()
-
-if (OE_OPTEE)
-  if (NOT OE_PACKAGE_PREFIX)
-    set(OE_PACKAGE_PREFIX "/opt/openenclave-sdk/sdk/optee")
-  endif ()
-
-  if (OE_OPTEE_QEMU_ARMV8)
-    set(OE_PACKAGE_OPTEE_PLATFORM vexpress-qemu_armv8a)
-  elseif (OE_OPTEE_GRAPEBOARD)
-    set(OE_PACKAGE_OPTEE_PLATFORM ls-ls1012grapeboard)
-  endif ()
-
-  set(OpenEnclave_DIR
-      ${OE_PACKAGE_PREFIX}/${OE_PACKAGE_OPTEE_PLATFORM}/lib/openenclave/cmake)
-endif ()
+set(OpenEnclave_DIR  ${OE_PACKAGE_PREFIX}/${OE_PACKAGE_OPTEE_PLATFORM}/lib/openenclave/cmake)
 
 string(TOUPPER ${CMAKE_BUILD_TYPE} OE_BUILD_TYPE)
 if ("${OE_BUILD_TYPE}" STREQUAL "DEBUG")
@@ -75,5 +30,5 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out/bin)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out/lib)
 
-add_subdirectory(source)
+add_subdirectory(ta)
 add_subdirectory(test)
